--- a/app/(pages)/globals.css
+++ b/app/(pages)/globals.css
@@ -16,4 +16,12 @@ body {
   color: rgb(var(--foreground-rgb));
 }
 
+@layer base {
+  .bg-primary {
+    @apply bg-green-400 text-white;
+  }
 
+  /*.app-input {*/
+  /*  @apply border-2 border-green-400 rounded-md p-2 w-full !shadow-none ;*/
+  /*}*/
+}
