--- a/app/(pages)/globals.css
+++ b/app/(pages)/globals.css
@@ -3,25 +3,34 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
+    --foreground-rgb: 0, 0, 0;
 }
 
 @media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-  }
+    :root {
+        --foreground-rgb: 255, 255, 255;
+    }
 }
 
 body {
-  color: rgb(var(--foreground-rgb));
+    color: rgb(var(--foreground-rgb));
 }
 
 @layer base {
-  /*.bg-primary {*/
-  /*  @apply bg-green-400 text-white;*/
-  /*}*/
+    /*.bg-primary {*/
+    /*  @apply bg-green-400 text-white;*/
+    /*}*/
+    /*.app-input {*/
+    /*  @apply border-2 border-green-400 rounded-md p-2 w-full !shadow-none ;*/
+    /*}*/
+}
 
-  /*.app-input {*/
-  /*  @apply border-2 border-green-400 rounded-md p-2 w-full !shadow-none ;*/
-  /*}*/
+@layer utilities {
+    .nav-link {
+        @apply text-zinc-500 hover:text-zinc-800 transition-colors;
+    }
+
+    .nav-link-active {
+        @apply text-zinc-900;
+    }
 }
