Build Assignee Select component and refactor layout

--- a/app/(pages)/globals.css
+++ b/app/(pages)/globals.css
@@ -30,6 +30,7 @@ body {
         @apply text-zinc-500 hover:text-zinc-800 transition-colors;
     }
 
+    /*noinspection CssUnusedSymbol*/
     .nav-link-active {
         @apply text-zinc-900;
     }
