--- a/app/(pages)/globals.css
+++ b/app/(pages)/globals.css
@@ -16,6 +16,10 @@ body {
     color: rgb(var(--foreground-rgb));
 }
 
+button {
+    cursor: pointer !important;
+}
+
 @layer base {
     /*.bg-primary {*/
     /*  @apply bg-green-400 text-white;*/
