Add data table component and fix Pagination component

--- a/app/(pages)/globals.css
+++ b/app/(pages)/globals.css
@@ -38,4 +38,12 @@ button {
     .nav-link-active {
         @apply text-zinc-900;
     }
+
+    .pagination-button {
+        @apply !min-w-[32px];
+    }
+
+    .pagination-button.sm-only {
+        @apply !hidden sm:!inline-flex;
+    }
 }
